--- a/blacklist.html
+++ b/blacklist.html
@@ -4,11 +4,11 @@
 	    <meta charset="utf-8">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		
-		<title>Pi-Hole Extension</title>
-		
 
-		
+		<title>Pi-Hole Extension</title>
+
+
+
 		<!-- Cascading Style Sheets -->
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link href="css/custom.css" rel="stylesheet" media="screen">
@@ -18,11 +18,11 @@
 	            min-height: 500px;
 	            /* overflow: hidden; */
 	         }
-	    </style>		
+	    </style>
 	</head>
-	
+
 	<body>
-	
+
 		<nav class="navbar navbar-default" role="navigation">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="popup.html">Pi-Hole</a>
@@ -37,19 +37,19 @@
 						<ul class="dropdown-menu">
 							<li class="dropdown-header">Settings</li>
 							<li><a href="settings.html">Extension Settings</a></li>
-							<li><a href="#">Your Pi-Hole Admin</a></li>
+							<li><a id="pihole_local_admin_href" href="#" target="_blank" >Your Pi-Hole Admin</a></li>
 							<li><a href="#">About this Extension...</a></li>
 							<li class="dropdown-header">Other Links</li>
-							<li><a href="#">Pi-Hole Website</a></li>
-							<li><a href="#">Pi-Hole Help</a></li>
+							<li><a href="https://pi-hole.net/">Pi-Hole Website</a></li>
+							<li><a href="https://pi-hole.net/help">Pi-Hole Help</a></li>
 						</ul>
 					</li>
 				</ul>
 			</div>
 		</nav>
-		
+
 		<div class="container">
-			
+
 			<div class="row">
 				<div class="col-12" style="height:50px;"></div>
 			</div>
@@ -72,7 +72,7 @@
 			                        <select id="blackdomainlist" class="form-control" name="blackdomainlist" disabled></select>
 			                        <errors will go here>
 			                	</fieldset>
-			                	<fieldset class="form-group">								        		
+			                	<fieldset class="form-group">
 			                		<button type="submit" class="btn btn-danger pull-right">Remove Entry <span class="fa fa-arrow-right"></span></button>
 		                		</fieldset>
 		        			</form>
